unpackaged/main/default/objects/Early_Renewal__c/Early_Renewal__c.object-meta.xml
<CustomObject>
    <label>Early Renewal</label>
    <nameField>
        <displayFormat>ERenew-{000000}</displayFormat>
        <label>Early Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Early Renewals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>