unpackaged/main/default/objects/Early_Renewal__c/fields/Exception_Request__c.field-meta.xml
<CustomField>
    <fullName>Exception_Request__c</fullName>
    <label>Exception Request</label>
    <referenceTo>Exception_Requests__c</referenceTo>
    <relationshipLabel>Early Renewals</relationshipLabel>
    <relationshipName>Early_Renewals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>