unpackaged/main/default/objects/Early_Renewal__c/fields/Net__c.field-meta.xml
<CustomField>
    <fullName>Net__c</fullName>
    <label>% Net</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>