unpackaged/main/default/objects/Early_Renewal__c/fields/Previous_Funded_Deal__c.field-meta.xml
<CustomField>
    <fullName>Previous_Funded_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Funded Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Early Renewals</relationshipLabel>
    <relationshipName>Early_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>