unpackaged/main/default/objects/Early_Renewal__c/fields/Requested_Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Fund_Date__c</fullName>
    <label>Requested Fund Date</label>
    <type>Date</type>
</CustomField>